--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -120,7 +120,8 @@ body{
 }
 .main-navbar ul {
     display:flex;
-}.main-navbar li {
+}
+.main-navbar li {
     margin: 0px 5px;
     margin-left: 30px;
     list-style: none;
@@ -143,36 +144,16 @@ body{
 
 /** INICIO Detalle de Producto**/
 
-*{
-    padding: 0;
-}
-
-.container-detalle img{
-    display:flex;
-    width: 400px;
-    margin-left: 20%;
-    margin-bottom: 10%;
-    align-content: center;        
-}
-
-.cont-detalle-imagen{
-    width: 500px;
-    margin-left: 55%;
-    margin-top: -35%;
-    align-content: flex-start;
-}
-
-.cont-detalle-imagen h2{
-    margin-left: -1%;
-}
-
-.cont-precio{
-    font-size: 20px;
+.container-detalle {
     display: flex;
-    width: 100px;
-    height: 30px;
-    align-content: center;
-    margin-left: -1%;
+    justify-content: space-between;
+    flex-direction: row;
+    font-size: 80%;
+    }
+
+.container-detalle .imagen {
+    width: 40%;
+    height: 40%;
 }
 
 .detalle {
@@ -183,46 +164,24 @@ body{
   
 }
 
-input,
-label {
-    margin: .4rem 0;
-    margin-left: -1%;
-}
-
-.cont-boton-agregar{
-    background-color: #5AAA95;
-    font: 'Delius Unicase', cursive;
-}
-
-.cont-nav-detalle{
-    margin-left: 53%;
-    margin-top: -1%;
-    display:flex;
-    justify-content: flex-start;
-    align-content: flex-start;
-}
-
-.cont-nav-detalle ul>li{
-    width: 100px;
+.container-detalle input {
+    width: 10%;
     height: 20px;
-    list-style: none;
-    text-decoration: none;
-    display:inline-block;
-    flex-direction:row;
-    justify-content:flex-start;
-    align-content: center;
-    margin-left: 3px;
+    color: #2a2d43;  
 }
 
-.cont-descripcion{
-    width: 450px;
-    height: 100px;
-    display: flex;
-    margin-left: 54%;
-    margin-top: -2%;
-    margin-bottom: 10%;
-    align-content: center;
+.container-detalle .metodos-aceptados ul>li{
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    text-decoration: none;
+    list-style: none;
+    color: #9b57db;
+    font-size: 50px;
+}
 
+.orden-metodos {
+    display: flex;
 }
 
 .descripcion, .precio{
