--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,30 +1,29 @@
 <header>
-    <div class="container-header">
+  <div class="container-header">
     <div class="info">
-        <p>ventas@playgroundjugueteria.com | +56 9999 5555</p>
+      <p>ventas@playgroundjugueteria.com | +56 9999 5555</p>
     </div>
     <!--Boton de Ingresar y Resgistro-->
     <div class="button-header">
 
-<% if(!locals.userLocal){ %>
-    <a href="/users/login">
-        <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
-    </a>
-    <a href="/users/register">
-        <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
-    </a>
+      <% if(!locals.userLocal){ %>
+        <a href="/users/login">
+          <button type="button" name="ingresar" class="btn-ingresar">Ingresar</button>
+        </a>
+        <a href="/users/register">
+          <button type="button" name="registro" class="btn-registrarse">Regístrarse</button>
+        </a>
 
-    <% } %>
+        <% } %>
 
-        
-    <% if(locals.userLocal){ %>
+          <% if(locals.userLocal){ %>
 
-        <form action="/users/logout" method="post">
-            <button type="submit">Cerrar sesion</button>
+            <form action="/users/logout" method="post">
+              <button type="submit">Cerrar sesion</button>
             </form>
-         <p class="userLogin"><%= "Bienvenido"+" "+userLocal.first_name +" "+ userLocal.last_name  %></p>
-         
-         
+            <p class="userLogin">
+              <%= "Bienvenido" +" "+userLocal.first_name +" "+ userLocal.last_name  %></p>
+   
         <% } %>
 
     </div>
