--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <%- include('../partials/head') %>
+  <%- include('../partials/head') %>
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/productDetail.css">
 
@@ -9,116 +10,125 @@
 
     <title>Playground-Jugueteria</title>
 </head>
-<body>
-    <!--Cabecera del sitio-->
 
-    <%- include('../partials/header') %>
+<body>
+  <!--Cabecera del sitio-->
+
+  <%- include('../partials/header') %>
 
     <!--Logo, buscador y carrito de compras-->
     <main class="container-main">
-        
-            <a href="/">
-                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
-            </a>
-     
-        <div class="buscar-wrapper">
-            <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
-            <button type="button" class="fas fa-search" id="lupa"></button>
+
+      <a href="/">
+        <img src="/images/Logo/Logo.png" alt="Logo Playground Jugueteria"></img>
+      </a>
+
+      <div class="buscar-wrapper">
+        <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
+        <button type="button" class="fas fa-search" id="lupa"></button>
+      </div>
+      <div class="container-carrito">
+        <div class="carro">
+          <a href="/products/detail/1">
+            <i class="fas fa-shopping-cart" id="icono-carrito">
+              <div class="box-carrito"></div>
+            </i>
+          </a>
         </div>
-        <div class="container-carrito">
-            <div class="carro">
-                <a href="/products/detail/1">
-                    <i class="fas fa-shopping-cart" id="icono-carrito">
-                        <div class="box-carrito"></div>
-                    </i>
-                </a>
-            </div>
-        </div>
+      </div>
     </main>
     <!--Menú-->
     <nav class="main-navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#marcas">Marcas</a></li>
-            <li><a href="/products">Productos</a></li>
-            <li><a href="/users">Usuarios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="/users/profile">Perfil</a></li>
-        </ul>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="#marcas">Marcas</a></li>
+        <li><a href="/products">Productos</a></li>
+        <li><a href="/users">Usuarios</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="/users/profile">Perfil</a></li>
+      </ul>
     </nav>
     <!--Detalle de Producto seccion-->
     <!--Imagen del producto-->
     <div class="container-detalle">
-        <div class="imagen">
-            <img class="imagenes" src="/images/Products/<%= product.imagen %>"  alt=""></img>
-        </div>
-            <div class="detalle">
-                <h2><%= product.titulo %></h2>
-                <br>
-                <p>N° Producto:<%= product.id %></p>
-                <br>
-                <p class="descripcion">Descripción:</p>
-                    <p><%= product.descripcionCorta %></p>
-                <br>
-                <p class="precio">Precio:</p>
-                    
-                    <p>$<%= product.precio %></p>
-                
-                  
-                    <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST" >
-                        <input class="editar" onclick="location.href='/products/edit/<%= product.id %>'" type="button" value="Editar" >
-                        <button type="submit" class="eliminar">Eliminar</button>
-                    </form>
-            
-                    </div>
-             </div>
-        
+      <div class="imagen">
+        <img class="imagenes" src="/images/Products/<%= product.imagen %>" alt=""></img>
+      </div>
+      <div class="detalle">
+        <h2>
+          <%= product.titulo %>
+        </h2>
+        <br>
+        <p>N° Producto:<%= product.id %>
+        </p>
+        <br>
+        <p class="descripcion">Descripción:</p>
+        <p>
+          <%= product.descripcionCorta %>
+        </p>
+        <br>
+        <p class="precio">Precio:</p>
+
+        <p>$<%= product.precio %>
+        </p>
+
+
+        <form action="/products/delete/<%= product.id %>?_method=DELETE" method="POST">
+          <input class="editar" onclick="location.href='/products/edit/<%= product.id %>'" type="button" value="Editar">
+          <button type="submit" class="eliminar">Eliminar</button>
+        </form>
+
+      </div>
+    </div>
+
     <div class="info-destacados">
-        <h3>
-            PRODUCTOS DESTACADOS
-        </h3>
+      <h3>
+        PRODUCTOS DESTACADOS
+      </h3>
     </div>
     <!--Descripcion y Navegador-->
-    
+
     <nav class="cont-nav-detalle">
-        <ul>
-            <li><a href="#">Descripción</a></li>
-            <li><a href="#">Edad</a></li>
-            <li><a href="#">Habilidad</a></li>
-            <li><a href="#">Tamaño</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Descripción</a></li>
+        <li><a href="#">Edad</a></li>
+        <li><a href="#">Habilidad</a></li>
+        <li><a href="#">Tamaño</a></li>
+      </ul>
     </nav>
     <div class="cont-descripcion">
-        <p>Muñeca con asiento de auto y accesorios de juguete. Ideal para que tus pequeños disfruten de los mejores paseos. Incluye sonajero, babero y 2 mamaderas.</p>
+      <p>Muñeca con asiento de auto y accesorios de juguete. Ideal para que tus pequeños disfruten de los mejores
+        paseos. Incluye sonajero, babero y 2 mamaderas.</p>
     </div>
 
     <!--Fin Detalle de Producto-->
-    
+
     <!--Productos Destacados-->
     <section class="destacados">
-        <div class="destacados-box1">
-            <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
-            <a href="/productDetail">
-                <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
-            </a>
-            
-        </div>
-        <div class="destacados-box2">
-            
-        </div>
+      <div class="destacados-box1">
+        <img src="/images/Products/destacado-frozen.jpeg" alt="Imagen frozen">
+        <img src="/images/Products/destacado-toyStory.jpeg" alt="Imagen toyStory">
+        <img src="/images/Products/destacado-spiderman.jpeg" alt="Imagen spiderman">
+        <img src="/images/Products/destacado-superman.jpeg" alt="Imagen superman">
+        <img src="/images/Products/destacado-starwars.jpeg" alt="Imagen star">
+        <a href="/productDetail">
+          <img src="/images/Products/muneca.jpg" alt="Imagen mariobros">
+        </a>
+
+      </div>
+      <div class="destacados-box2">
+
+      </div>
     </section>
     <!--Nuestras Marcas-->
     <section id="marcas">
-       
-    
+
+
 
     </section>
-      <!--Footer-->
-      <%- include('../partials/footer') %>
-      
+    <!--Footer-->
+    <%- include('../partials/footer') %>
+
 </body>
+
 </html>
