--- a/src/views/users/users.ejs
+++ b/src/views/users/users.ejs
@@ -1,94 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <%- include('../partials/head') %>
+  <%- include('../partials/head') %>
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/users.css">
-  
+
 
 
 
     <title>Playground-Jugueteria</title>
 </head>
-<body>
-    <!--Cabecera del sitio-->
 
-    <%- include('../partials/header') %>
+<body>
+  <!--Cabecera del sitio-->
+
+  <%- include('../partials/header') %>
 
     <!--Logo, buscador y carrito de compras-->
     <main class="container-main">
-        
-            <a href="/">
-                <img src="/images/Logo/Logo.png"  alt="Logo Playground Jugueteria"></img>
-            </a>
-     
-        <div class="buscar-wrapper">
-            <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
-            <button type="button" class="fas fa-search" id="lupa"></button>
+
+      <a href="/">
+        <img src="/images/Logo/Logo.png" alt="Logo Playground Jugueteria"></img>
+      </a>
+
+      <div class="buscar-wrapper">
+        <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
+        <button type="button" class="fas fa-search" id="lupa"></button>
+      </div>
+      <div class="container-carrito">
+        <div class="carro">
+          <a href="/products/detail/1">
+            <i class="fas fa-shopping-cart" id="icono-carrito">
+              <div class="box-carrito"></div>
+            </i>
+          </a>
         </div>
-        <div class="container-carrito">
-            <div class="carro">
-                <a href="/products/detail/1">
-                    <i class="fas fa-shopping-cart" id="icono-carrito">
-                        <div class="box-carrito"></div>
-                    </i>
-                </a>
-            </div>
-        </div>
+      </div>
     </main>
     <!--Menú-->
     <nav class="main-navbar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#marcas">Marcas</a></li>
-            <li><a href="/products">Productos</a></li>
-            <li><a href="/users">Usuarios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="/users/profile">Perfil</a></li>
-        </ul>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="#marcas">Marcas</a></li>
+        <li><a href="/products">Productos</a></li>
+        <li><a href="/users">Usuarios</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="/users/profile">Perfil</a></li>
+      </ul>
     </nav>
 
     <h1 class="titulo">MI LISTA DE USUARIOS</h1>
     <br>
     <br>
-    <input class="crear" type="button" onclick="location.href='/users/register'" value="Crear nuevo usuario" >
+    <input class="crear" type="button" onclick="location.href='/users/register'" value="Crear nuevo usuario">
 
 
 
     <div class="contenedor_principal">
 
-    
-        <section class="menu">
-          <% users.forEach(function(users) { %>
-            <a href="/users/detail/<%= users.id %>">
-  
-              <article>
-                <div class="imgen-contenedor">
-                  <img src="/images/Users/<%= users.image %>" alt="">
-                </div>
-                <ul>
-                  <li>
-                      Nombre: <%= users.first_name %>
-                  </li>
-                  <li>
-                    Apellido: <%= users.last_name %>
+
+      <section class="menu">
+        <% allUsers.forEach(function(allUsers) { %>
+          <a href="/users/detail/<%= allUsers.user_id %>">
+
+            <article>
+              <div class="imgen-contenedor">
+                <img src="/images/Users/<%= allUsers.image %>" alt="">
+              </div>
+              <ul>
+                <li>
+                  Nombre: <%= allUsers.first_name %>
                 </li>
-                  <li>
-                      Email: <%= users.email %> 
-                  </li>
-                  <li>
-                      Tipo de usuario: $<%= users.category %>
-                  </li>
-                </ul>
-              </article>
-            </a>
-          <% }) %> 
-    
-        </section>
-      </div>
-  
-    
-   
+                <li>
+                  Apellido: <%= allUsers.last_name %>
+                </li>
+                <li>
+                  Email: <%= allUsers.email %>
+                </li>
 
+              </ul>
+            </article>
+          </a>
+          <% }) %>
 
-
+      </section>
+    </div>
